# syncplaympv

./: .gitignore  Cargo.toml  Docker-prod.yml  Dockerfile  Makefile.toml  README.md  TODO.md  ipc.rst
.github/workflows/: release.yml
src/: lib.rs  main.rs  mpv.rs  network.rs
