[package]
name = "syncplaympv"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "syncplaympv-server"
path = "bin/server.rs"

[[bin]]
name = "syncplaympv-client"
path = "bin/client.rs"

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rfd = "0.15"
thiserror = "2"
tspawn = "0.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Pipes"] }
